@@ -44,6 +44,7 @@ PLUGIN_DEPENDENCIES     = \
   LSP_PLUGINS_LATENCY_METER \
   LSP_PLUGINS_LIMITER \
   LSP_PLUGINS_LOUD_COMP \
+  LSP_PLUGINS_MB_CLIPPER \
   LSP_PLUGINS_MB_COMPRESSOR \
   LSP_PLUGINS_MB_DYNA_PROCESSOR \
   LSP_PLUGINS_MB_EXPANDER \
